// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListingPage > sould display datagrid 1`] = `
<div>
  <div
    class="header mt-8"
  >
    <div
      data-testid="notifications"
    />
  </div>
  <ods-text
    class="mt-6 block"
    preset="heading-4"
  >
    pci_projects_project_storages_containers_users_title
  </ods-text>
  <ods-text
    class="mt-6 block"
    preset="paragraph"
  >
    pci_projects_project_storages_containers_users_user_description
  </ods-text>
  <div
    class="sm:flex items-center justify-between mt-8"
  >
    <ods-button
      class="xs:mb-0.5 sm:mb-0"
      color="primary"
      icon="plus"
      label="pci_projects_project_storages_containers_users_add_user"
      size="sm"
    />
    <div
      class="flex justify-center gap-4"
    >
      <ods-button
        class="xs:mb-0.5 sm:mb-0"
        color="primary"
        icon="refresh"
        label=""
        size="sm"
        variant="outline"
      />
      <ods-input
        class="min-w-[15rem]"
        name="searchField"
        value=""
      />
      <ods-button
        icon="magnifying-glass"
        label=""
        size="sm"
      />
      <ods-button
        color="primary"
        icon="filter"
        id="popover-filter"
        label="pci-common:common_criteria_adder_filter_label"
        size="sm"
        slot="popover-trigger"
        variant="outline"
      />
      <ods-popover
        trigger-id="popover-filter"
      >
        <div>
          <ods-form-field
            class="w-full"
          >
            <div
              slot="label"
            >
              <span
                class="text-[--ods-color-heading] leading-[22px]"
              >
                common_criteria_adder_column_label
              </span>
            </div>
            <ods-select
              data-testid="add-filter_select_idColumn"
              name="add-filter_select_idColumn"
              value="username"
            >
              <option
                value="username"
              >
                pci_projects_project_storages_containers_users_username
              </option>
              <option
                value="description"
              >
                pci_projects_project_storages_containers_users_description
              </option>
              <option
                value="access"
              >
                pci_projects_project_storages_containers_users_accesskey
              </option>
            </ods-select>
          </ods-form-field>
        </div>
        <div>
          <ods-form-field
            class="mt-2 w-full"
          >
            <div
              slot="label"
            >
              <span
                class="text-[--ods-color-heading] leading-[22px]"
              >
                common_criteria_adder_operator_label
              </span>
            </div>
            <div>
              <ods-select
                name="add-operator-username"
                value="includes"
              >
                <option
                  value="includes"
                >
                  common_criteria_adder_operator_includes
                </option>
                <option
                  value="starts_with"
                >
                  common_criteria_adder_operator_starts_with
                </option>
                <option
                  value="ends_with"
                >
                  common_criteria_adder_operator_ends_with
                </option>
                <option
                  value="is_equal"
                >
                  common_criteria_adder_operator_is_equal
                </option>
                <option
                  value="is_different"
                >
                  common_criteria_adder_operator_is_different
                </option>
              </ods-select>
            </div>
          </ods-form-field>
        </div>
        <div>
          <ods-form-field
            class="mt-2 w-full"
          >
            <div
              slot="label"
            >
              <span
                class="text-[--ods-color-heading] leading-[22px]"
              >
                common_criteria_adder_value_label
              </span>
            </div>
            <ods-input
              class="border"
              data-testid="filter-add_value-input"
              name="filter-add_value-input"
              type="text"
              value=""
            />
          </ods-form-field>
        </div>
        <div>
          <ods-button
            class="mt-4 w-full filter-add-button-submit"
            data-testid="filter-add_submit"
            is-disabled="true"
            label="common_criteria_adder_submit_label"
            size="sm"
          />
        </div>
      </ods-popover>
    </div>
  </div>
  <div
    class="my-8 mt-8"
  />
  <div
    class="mt-8"
  >
    <div>
      <div
        class="contents px-[1px] overflow-x-visible"
      >
        <ods-table
          class="overflow-x-visible"
        >
          <!---->
          <table
            class="w-full border-collapse"
            style="--expander-column-width: 2.5rem;"
          >
            <thead>
              <tr>
                <th
                  class="text-left pl-4 h-11 whitespace-nowrap "
                >
                  <div
                    class="cursor-pointer select-none"
                    data-testid="header-username"
                  >
                    <span>
                      pci_projects_project_storages_containers_users_username
                    </span>
                    <span
                      class="align-middle inline-block h-4 -mt-6"
                    >
                      <ods-icon
                        class="invisible"
                        name="arrow-down"
                      />
                    </span>
                  </div>
                </th>
                <th
                  class="text-left pl-4 h-11 whitespace-nowrap "
                >
                  <div
                    class="cursor-pointer select-none"
                    data-testid="header-description"
                  >
                    <span>
                      pci_projects_project_storages_containers_users_description
                    </span>
                    <span
                      class="align-middle inline-block h-4 -mt-6"
                    >
                      <ods-icon
                        class="invisible"
                        name="arrow-down"
                      />
                    </span>
                  </div>
                </th>
                <th
                  class="text-left pl-4 h-11 whitespace-nowrap "
                >
                  <div
                    class="cursor-pointer select-none"
                    data-testid="header-access"
                  >
                    <span>
                      pci_projects_project_storages_containers_users_accesskey
                    </span>
                    <span
                      class="align-middle inline-block h-4 -mt-6"
                    >
                      <ods-icon
                        class="invisible"
                        name="arrow-down"
                      />
                    </span>
                  </div>
                </th>
                <th
                  class="text-left pl-4 h-11 whitespace-nowrap "
                >
                  <div
                    class=""
                    data-testid="header-actions"
                  >
                    <span />
                    <span
                      class="align-middle inline-block h-4 -mt-6"
                    >
                      <ods-icon
                        class="invisible"
                        name="arrow-down"
                      />
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="border-solid border-[1px] h-[3.25rem] border-[--ods-color-blue-200]"
              >
                <td
                  class="text-left pl-4"
                >
                  <ods-text
                    preset="span"
                  >
                    username
                  </ods-text>
                </td>
                <td
                  class="text-left pl-4"
                >
                  <ods-text
                    preset="span"
                  >
                    description
                  </ods-text>
                </td>
                <td
                  class="text-left pl-4"
                >
                  <ods-text
                    preset="span"
                  >
                    common_empty_text_cell
                  </ods-text>
                </td>
                <td
                  class="text-left pl-4"
                >
                  <div
                    class="min-w-16"
                  >
                    <div
                      class="w-min"
                      id="navigation-action-trigger-id"
                    >
                      <ods-button
                        data-testid="navigation-action-trigger-action"
                        icon="ellipsis-vertical"
                        id="id"
                        is-disabled="false"
                        is-loading="false"
                        size="sm"
                        slot="menu-title"
                        variant="outline"
                      />
                    </div>
                    <ods-popover
                      class="py-[8px] px-0 w-max"
                      data-testid="navigation-action-trigger-action-popover"
                      trigger-id="navigation-action-trigger-id"
                      with-arrow="true"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <ods-button
                          class="menu-item-button w-full"
                          display-tooltip="false"
                          label="pci_projects_project_storages_containers_users_import_json"
                          size="sm"
                          variant="ghost"
                        />
                        <ods-button
                          class="menu-item-button w-full"
                          display-tooltip="false"
                          label="pci_projects_project_storages_containers_users_download_json"
                          size="sm"
                          variant="ghost"
                        />
                        <ods-button
                          class="menu-item-button w-full"
                          display-tooltip="false"
                          label="pci_projects_project_storages_containers_users_download_rclone_file"
                          size="sm"
                          variant="ghost"
                        />
                        <ods-button
                          class="menu-item-button w-full"
                          display-tooltip="false"
                          label="pci_projects_project_storages_containers_users_see_secret_key"
                          size="sm"
                          variant="ghost"
                        />
                        <ods-button
                          class="menu-item-button w-full"
                          display-tooltip="false"
                          label="pci_projects_project_storages_containers_delete_label"
                          size="sm"
                          variant="ghost"
                        />
                      </div>
                    </ods-popover>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </ods-table>
      </div>
      <ods-pagination
        class="flex xs:justify-start md:justify-end my-8"
        default-current-page="1"
        default-items-per-page="10"
        total-items="0"
        total-pages="0"
      >
        <span
          class="mr-3"
          slot="before-total-items"
        >
          common_pagination_of
        </span>
        <span
          class="ml-3"
          slot="after-total-items"
        >
          common_pagination_results
        </span>
      </ods-pagination>
    </div>
  </div>
  Outlet
</div>
`;

exports[`ListingPage > sould display spinner 1`] = `
<DocumentFragment>
  <div
    class="header mt-8"
  >
    <div
      data-testid="notifications"
    />
  </div>
  <ods-text
    class="mt-6 block"
    preset="heading-4"
  >
    pci_projects_project_storages_containers_users_title
  </ods-text>
  <ods-text
    class="mt-6 block"
    preset="paragraph"
  >
    pci_projects_project_storages_containers_users_user_description
  </ods-text>
  <div
    class="sm:flex items-center justify-between mt-8"
  >
    <ods-button
      class="xs:mb-0.5 sm:mb-0"
      color="primary"
      icon="plus"
      label="pci_projects_project_storages_containers_users_add_user"
      size="sm"
    />
    <div
      class="flex justify-center gap-4"
    >
      <ods-button
        class="xs:mb-0.5 sm:mb-0"
        color="primary"
        icon="refresh"
        label=""
        size="sm"
        variant="outline"
      />
      <ods-input
        class="min-w-[15rem]"
        name="searchField"
        value=""
      />
      <ods-button
        icon="magnifying-glass"
        label=""
        size="sm"
      />
      <ods-button
        color="primary"
        icon="filter"
        id="popover-filter"
        label="pci-common:common_criteria_adder_filter_label"
        size="sm"
        slot="popover-trigger"
        variant="outline"
      />
      <ods-popover
        trigger-id="popover-filter"
      >
        <div>
          <ods-form-field
            class="w-full"
          >
            <div
              slot="label"
            >
              <span
                class="text-[--ods-color-heading] leading-[22px]"
              >
                common_criteria_adder_column_label
              </span>
            </div>
            <ods-select
              data-testid="add-filter_select_idColumn"
              name="add-filter_select_idColumn"
              value="username"
            >
              <option
                value="username"
              >
                pci_projects_project_storages_containers_users_username
              </option>
              <option
                value="description"
              >
                pci_projects_project_storages_containers_users_description
              </option>
              <option
                value="access"
              >
                pci_projects_project_storages_containers_users_accesskey
              </option>
            </ods-select>
          </ods-form-field>
        </div>
        <div>
          <ods-form-field
            class="mt-2 w-full"
          >
            <div
              slot="label"
            >
              <span
                class="text-[--ods-color-heading] leading-[22px]"
              >
                common_criteria_adder_operator_label
              </span>
            </div>
            <div>
              <ods-select
                name="add-operator-username"
                value="includes"
              >
                <option
                  value="includes"
                >
                  common_criteria_adder_operator_includes
                </option>
                <option
                  value="starts_with"
                >
                  common_criteria_adder_operator_starts_with
                </option>
                <option
                  value="ends_with"
                >
                  common_criteria_adder_operator_ends_with
                </option>
                <option
                  value="is_equal"
                >
                  common_criteria_adder_operator_is_equal
                </option>
                <option
                  value="is_different"
                >
                  common_criteria_adder_operator_is_different
                </option>
              </ods-select>
            </div>
          </ods-form-field>
        </div>
        <div>
          <ods-form-field
            class="mt-2 w-full"
          >
            <div
              slot="label"
            >
              <span
                class="text-[--ods-color-heading] leading-[22px]"
              >
                common_criteria_adder_value_label
              </span>
            </div>
            <ods-input
              class="border"
              data-testid="filter-add_value-input"
              name="filter-add_value-input"
              type="text"
              value=""
            />
          </ods-form-field>
        </div>
        <div>
          <ods-button
            class="mt-4 w-full filter-add-button-submit"
            data-testid="filter-add_submit"
            is-disabled="true"
            label="common_criteria_adder_submit_label"
            size="sm"
          />
        </div>
      </ods-popover>
    </div>
  </div>
  <div
    class="my-8 mt-8"
  />
  <ods-spinner
    class="mt-8"
    data-testid="List-spinner"
    size="md"
  />
  Outlet
</DocumentFragment>
`;
